--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,6 +1,6 @@
 .jumbotron{
     margin: 20px;
-    background-color:black ;
-    color :white;
+    background-color:none;
+    color :black;
     border-radius: 30px;
 }
